# bitcoindevkit.org

./: .gitignore  .gitmodules  404.html  CNAME  README.md  config.toml  index.html  index.json  index.xml  justfile  package-lock.json  package.json  publish_to_ghpages.sh  pyproject.toml  search.json  site.webmanifest  sitemap.xml  zensical.toml
.github/workflows/: build.yml  publish.yml
adoption/all/: index.html
adoption/custodial/: index.html
adoption/desktop/: index.html
adoption/exchange/: index.html
adoption/hardware/: index.html
adoption/infrastructure/: index.html
adoption/mobile/: index.html
adoption/web/: index.html
android/: index.html  navigation.html  package-list
android/bdk-android/: package-list
android/org.bitcoindevkit/: index.html
android/scripts/: pages.json
assets/css/: 0.styles.1a3a04dc.css  0.styles.223183a5.css  0.styles.512b91ab.css  0.styles.8ae2d532.css  0.styles.ae8c95ef.css  0.styles.b24aebc5.css  0.styles.d0e837cb.css  0.styles.fde75ca4.css
assets/js/: 1.2e08efec.js  1.2e1eea68.js  1.519cc26e.js  1.5c570f52.js  1.7dc6d96c.js  1.80e43b7e.js  1.a21fccb3.js  1.ce44e368.js  1.daa713b9.js  1.e424882b.js  1.f3a41fb6.js  10.0eabaaf0.js  10.13eb2570.js  10.1b7861a1.js  10.24210771.js  10.2c083324.js  10.2c3c4c1e.js  10.39d04896.js  10.3d98bf6b.js  10.4529336f.js  10.45539df8.js  10.49750700.js  10.4cbb1c25.js  10.57529cd3.js  10.5b29ddb1.js  10.6721df3b.js  10.67a7ab1b.js  10.6a32a50f.js  10.73ba8095.js  10.74896d25.js  10.75aa7187.js  10.7709ad54.js  10.7d85df6d.js  10.83ad8561.js  10.84d472df.js  10.8ac66bdf.js  10.8c2fd04e.js  10.91ee52f8.js  10.951e5397.js  10.977a86cf.js  (+5368 more)
assets/pgp/: notmandatory.asc  nymius.asc  rustaceanrob.asc  security.asc  tvpeter.asc
author/: index.html  index.xml
authors/: index.html  index.xml
authors/alekos-filini/: index.html  index.xml
authors/gabriele-domenichini/: index.html  index.xml
authors/rajarshi-maitra/: index.html  index.xml
authors/riccardo-casatta/: index.html  index.xml
authors/steve-myers/: index.html  index.xml
authors/thunderbiscuit/: index.html  index.xml
bdk-android/: navigation.html
bdk-android/bdk-android/: package-list
bdk-android/scripts/: pages.json
bdk-cli/: index.html  index.xml
bdk-cli/compiler/: index.html
bdk-cli/concept/: index.html
bdk-cli/installation/: index.html
bdk-cli/interface/: index.html
bdk-cli/introduction/: index.html
bdk-cli/playground/: 1.playground.js  index.html  playground.js
bdk-cli/regtest/: index.html
bdk-jvm/: navigation.html
bdk-jvm/bdk-jvm/: package-list
bdk-jvm/scripts/: pages.json  sourceset_dependencies.js
blog/: index.html  index.xml
blog/2023_q4_update/: index.html
blog/2024_q1_update/: index.html
blog/2024_q2_update/: index.html
blog/2024_q3_update/: index.html
case-studies/: index.html
categories/: index.html  index.xml
content/: _index.md  descriptors_in_the_wild.md
css/: blog.css  style.css  variables.css
descriptors/: index.html  index.xml
docs/: README.md  case-studies.md  foundation.md  getting-started.md  index.html  index.md
examples/: index.html
foundation/: index.html
getting-started/: index.html
java/: allclasses.html  element-list  index.html  member-search-index.js  module-search-index.js  type-search-index.js
js/: main.js
jvm/: index.html  navigation.html
pgp/: lloyd.asc  valuedmammal-ssh.txt
playground/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
playground/src/: blockly.js  blockly_storage.js  index.js  lib.rs
playground/www/: index.html  package-lock.json  package.json  webpack.config.js
playground/www/src/: blockly.js  index.js
repl/: index.html  index.xml
static/: CNAME
stylesheets/: extra.css
supporters/: index.html  index.xml
tags/: index.html  index.xml
theme/: config.js  package-lock.json  package.json  preprocessMarkdown.js
(+15225 files in other folders)
